Load jars using wildcard. Functions.bbl